--- a/Ceriyo.Toolset.WPF/Views/ApplicationRootView/ApplicationRoot.xaml
+++ b/Ceriyo.Toolset.WPF/Views/ApplicationRootView/ApplicationRoot.xaml
@@ -14,6 +14,7 @@
         Title="{Binding WindowTitle}" 
         Height="350" 
         Width="525"
+        Loaded="ApplicationRoot_OnLoaded"
         Closing="ApplicationRoot_OnClosing">
     <Grid>
 
