--- a/Ceriyo.Toolset.WPF/Views/NewModuleView/NewModule.xaml
+++ b/Ceriyo.Toolset.WPF/Views/NewModuleView/NewModule.xaml
@@ -36,7 +36,7 @@
             Grid.ColumnSpan="2"
             Grid.Row="0"
             Margin="5,5,5,5"
-            Text="{Binding Name}"
+            Text="{Binding Path=ModuleData.Name, Mode=TwoWay, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
             TabIndex="0">
         </TextBox>
         
@@ -51,7 +51,7 @@
             Grid.ColumnSpan="2"
             Grid.Row="1"
             Margin="5,5,5,5"
-            Text="{Binding Tag}"
+            Text="{Binding Path=ModuleData.Tag, Mode=TwoWay, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
             TabIndex="1">
         </TextBox>
         
@@ -66,7 +66,7 @@
             Grid.Column="1"
             Grid.ColumnSpan="2"
             Margin="5,5,5,5"
-            Text="{Binding Resref}"
+            Text="{Binding Path=ModuleData.Resref, Mode=TwoWay, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
             TabIndex="2">
         </TextBox>
 
