--- a/Ceriyo.Toolset.WPF/App.xaml
+++ b/Ceriyo.Toolset.WPF/App.xaml
@@ -3,6 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Ceriyo.Toolset.WPF">
     <Application.Resources>
-         
+         <ResourceDictionary>
+             <ResourceDictionary.MergedDictionaries>
+                 <ResourceDictionary Source="/Ceriyo.Infrastructure.WPF;component/Templates/ErrorTemplate.xaml"></ResourceDictionary>
+             </ResourceDictionary.MergedDictionaries>
+         </ResourceDictionary>
     </Application.Resources>
 </Application>
